--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,6 @@
-# The following redirect is intended for use with most SPAs that handle
-# routing internally.
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+[build]
+  command = "jekyll build"
+  publish = "_site"
 
-[[headers]]
-  # Define which paths this specific [[headers]] block will cover.
-  for = "/*"
-    [headers.values]
-    Access-Control-Allow-Origin = "*"
+[build.environment]
+  JEKYLL_ENV = "production"
