--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ user_description: Programmer (Interested in Philosophy and Math)
 # profile_pic: /assets/img/profile.png
 # favicon: /assets/img/favicon.png
 copyright_name: John Doe
-baseurl: "/" # the subpath of your site, e.g. /blog
+baseurl: "/flashcard" # the subpath of your site, e.g. /blog
 # url: "https://simply-jekyll.netlify.app/" # the base hostname & protocol for your site, e.g. http://example.com
 encoding: utf-8
 
