--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Flashcard
 name: John Doe
 user_description: Programmer (Interested in Philosophy and Math)
-notes_url: "https://simply-jekyll.netlify.app"
+notes_url: ""
 profile_pic: /assets/img/profile.png
 favicon: /assets/img/favicon.png
 copyright_name: John Doe
