--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ title: Flashcard
 # profile_pic: /assets/img/profile.png
 # favicon: /assets/img/favicon.png
 copyright_name: yeungn
-baseurl: "https://yeungndev.github.io/" # the subpath of your site, e.g. /blog
-url: "/flashcards" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/flashcard" # the subpath of your site, e.g. /blog
+url: "https://yeungndev.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 encoding: utf-8
 
 # Build settings
@@ -47,5 +47,5 @@ defaults:
       path: ""
       type: notes
     values:
-      layout: post
+      layout: notes
       content-type: notes
