updating config, permalink for notes

--- a/_config.yml
+++ b/_config.yml
@@ -51,4 +51,4 @@ defaults:
     values:
       layout: notes
       content-type: notes
-      permalink: /notes/:title
+      permalink: /flashcard/notes/:title
